--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@vitejs/plugin-vue": "^5.0.4",
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0",
-        "vite": "^5.0"
+        "vite": "^5.0",
+        "typescript": "^5.4.3",
+        "vue": "^3.4.21"
     }
 }
